removing not yet implemented encoding

--- a/ConvertData.ipynb
+++ b/ConvertData.ipynb
@@ -4,14 +4,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
     "import ntpath\n",
-    "import music21 as m21\n",
+    "#import music21 as m21\n",
     "import pretty_midi as pm\n",
     "import glob2 as glob\n",
     "import numpy as np\n",
@@ -22,7 +24,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Convert Kern files to MIDI"
    ]
@@ -31,18 +36,22 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "krn_glob = '/Users/rafaelvalle/Desktop/datasets/Piano/mozart/*.krn'"
+    "krn_glob = '/media/steampunkhd/rafaelvalle/datasets/Piano/**/*.krn'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -53,153 +62,77 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Convert MIDI files to Piano Roll"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "midi_glob = '/Users/rafaelvalle/Desktop/datasets/Piano/**/*.midi'"
+    "midi_glob = '/media/steampunkhd/rafaelvalle/datasets/MIDI/Piano/**/*.mid'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/rafaelvalle/Desktop/datasets/Piano/beethoven/sonata01-1.krn.midi.encoded'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "filepath = glob.glob(midi_glob)[0]\n",
-    "filepath+'.encoded'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python2.7/site-packages/pretty_midi/pretty_midi.py:87: RuntimeWarning: Tempo, Key or Time signature change events found on non-zero tracks.  This is not a valid type 0 or type 1 MIDI file. Tempo, Key or Time Signature may be wrong.\n",
-      "  RuntimeWarning)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<type 'exceptions.NameError'>\n",
-      "<type 'exceptions.NameError'>\n",
-      "<type 'exceptions.NameError'>\n",
-      "<type 'exceptions.NameError'>\n",
-      "<type 'exceptions.NameError'>\n",
-      "<type 'exceptions.NameError'>\n",
-      "<type 'exceptions.NameError'>\n",
-      "<type 'exceptions.NameError'>\n",
-      "<type 'exceptions.KeyboardInterrupt'>\n",
-      "<type 'exceptions.KeyboardInterrupt'>\n",
-      "<type 'exceptions.NameError'>\n",
-      "<type 'exceptions.KeyboardInterrupt'>\n",
-      "<type 'exceptions.KeyboardInterrupt'>\n",
-      "<type 'exceptions.KeyboardInterrupt'>\n",
-      "<type 'exceptions.KeyboardInterrupt'>\n",
-      "<type 'exceptions.KeyboardInterrupt'>\n",
-      "<type 'exceptions.KeyboardInterrupt'>\n",
-      "<type 'exceptions.KeyboardInterrupt'>\n",
-      "<type 'exceptions.KeyboardInterrupt'>\n",
-      "<type 'exceptions.KeyboardInterrupt'>\n",
-      "<type 'exceptions.KeyboardInterrupt'>\n",
-      "<type 'exceptions.NameError'>\n",
-      "<type 'exceptions.KeyboardInterrupt'>\n",
-      "<type 'exceptions.KeyboardInterrupt'>\n",
-      "<type 'exceptions.KeyboardInterrupt'>\n",
-      "<type 'exceptions.KeyboardInterrupt'>\n",
-      "<type 'exceptions.KeyboardInterrupt'>\n",
-      "<type 'exceptions.KeyboardInterrupt'>\n",
-      "<type 'exceptions.KeyboardInterrupt'>\n",
-      "<type 'exceptions.KeyboardInterrupt'>\n",
-      "<type 'exceptions.NameError'>\n",
-      "<type 'exceptions.NameError'>\n",
-      "<type 'exceptions.NameError'>\n",
-      "<type 'exceptions.NameError'>\n",
-      "<type 'exceptions.NameError'>\n",
-      "<type 'exceptions.NameError'>\n",
-      "<type 'exceptions.NameError'>\n",
-      "<type 'exceptions.NameError'>\n",
-      "<type 'exceptions.NameError'>\n"
+      "/media/steampunkhd/rafaelvalle/datasets/MIDI/Piano/bach/Fugue6.mid <type 'exceptions.IOError'>\n",
+      "/media/steampunkhd/rafaelvalle/datasets/MIDI/Piano/bach/Fugue15.mid <type 'exceptions.IOError'>\n",
+      "/media/steampunkhd/rafaelvalle/datasets/MIDI/Piano/bach/Fugue11.mid <type 'exceptions.IOError'>\n",
+      "/media/steampunkhd/rafaelvalle/datasets/MIDI/Piano/bach/Prelude15.mid <type 'exceptions.IOError'>\n",
+      "/media/steampunkhd/rafaelvalle/datasets/MIDI/Piano/bach/Prelude22.mid <type 'exceptions.EOFError'>\n",
+      "/media/steampunkhd/rafaelvalle/datasets/MIDI/Piano/bach/Fugue12.mid <type 'exceptions.IOError'>\n",
+      "/media/steampunkhd/rafaelvalle/datasets/MIDI/Piano/bach/Prelude19.mid <type 'exceptions.EOFError'>\n",
+      "/media/steampunkhd/rafaelvalle/datasets/MIDI/Piano/bach/Fugue24.mid <type 'exceptions.EOFError'>\n",
+      "/media/steampunkhd/rafaelvalle/datasets/MIDI/Piano/bach/Prelude24.mid <type 'exceptions.IOError'>\n",
+      "/media/steampunkhd/rafaelvalle/datasets/MIDI/Piano/bach/Prelude14.mid <type 'exceptions.IOError'>\n",
+      "/media/steampunkhd/rafaelvalle/datasets/MIDI/Piano/bach/Fugue13.mid <type 'exceptions.IOError'>\n",
+      "/media/steampunkhd/rafaelvalle/datasets/MIDI/Piano/bach/Fugue8.mid <type 'exceptions.IOError'>\n",
+      "/media/steampunkhd/rafaelvalle/datasets/MIDI/Piano/bach/Prelude13.mid <type 'exceptions.IOError'>\n",
+      "/media/steampunkhd/rafaelvalle/datasets/MIDI/Piano/bach/Prelude20.mid <type 'exceptions.IOError'>\n",
+      "/media/steampunkhd/rafaelvalle/datasets/MIDI/Piano/bach/Fugue19.mid <type 'exceptions.IOError'>\n"
      ]
     }
    ],
    "source": [
     "for filepath in glob.glob(midi_glob):\n",
     "    try:\n",
-    "        proll = pm.PrettyMIDI(filepath).get_piano_roll(fs=100).T\n",
+    "        proll = pm.PrettyMIDI(filepath).get_piano_roll(fs=10).T\n",
     "        np.save(filepath, proll)\n",
     "        \n",
-    "        # save encoded proll\n",
-    "        proll_data = []\n",
-    "        for t in xrange(proll.shape[0]-1):\n",
-    "            if not np.array_equal(np.argwhere(proll[t] > 1), np.argwhere(proll[t+1] > 1)):        \n",
-    "                proll_data.append([proll[t], i])\n",
-    "                i = 1\n",
-    "            else:\n",
-    "                i += 1\n",
-    "        np.save(filepath+'.encoded', np.array(proll_data))\n",
     "    except:\n",
-    "        print sys.exc_info()[0]\n",
+    "        print filepath, sys.exc_info()[0]\n",
     "        continue"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Encode Piano Rolls to reduce redundancy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
    "source": [
-    "npy_glob = '/Users/rafaelvalle/Desktop/datasets/Piano/**/*.midi'\n",
-    "for filepath in glob.glob(midi_glob):\n",
-    "    \n"
+    "## Implement encoding for Piano Rolls to reduce redundancy"
    ]
   }
  ],
@@ -219,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.12+"
   }
  },
  "nbformat": 4,
